@@ -10,6 +10,8 @@ Release 2.0 - Future Development
 
 Release 1.13 - ???
 
+  * Add detection for embedded MSChart.Graph files (TIKA-1033).
+
   * Fix NPE in Sqlite parser from Nick C (TIKA-1927).
 
   * Fix NPE in Open Document parser from Nick C (TIKA-1916).
